# ssh-slurm

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ssh_slurm/: __init__.py  example.py
src/ssh_slurm/cli/: main.py  profile.py  submit.py
src/ssh_slurm/core/: client.py  config.py  proxy_client.py  ssh_config.py
src/ssh_slurm/helpers/: proxy_helper.py
tests/: README.md  test_config.py  test_ssh_config.py
