[project]
name = "ssh-slurm"
version = "0.2.0"
description = "Submit and monitor SLURM jobs via SSH"
readme = "README.md"
authors = [{ name = "ksterx", email = "kostonerx@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["paramiko>=4.0.0", "rich>=14.1.0"]

[project.scripts]
ssb = "ssh_slurm.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.17.1", "pre-commit>=4.3.0", "pytest>=8.4.1", "ruff>=0.12.10"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
follow_imports = "silent"
